2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.29

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: Removed accidentally checked
	in code
	* matchbox/core/mb-wm-decor.c: Fixed NB#109094 - crash caused by
	clicking on title bar button repeatedly very quickly

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: More fixes for
	  g_object_unref - deal with weak reference on clutter
	  actors.

2009-04-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.28

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Made sure g_object_unref
	  works properly on clutter actors

2009-04-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.27

2009-04-01  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c (call_handlers_for_event):
	Fix for the case where a handler is removed from the handlers list
	while it is being called.

2009-04-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Remove escaping from
	WM_NAME and _NET_WM_NAME titles.

2009-04-01  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for BN#107681.
	Moved setting and unsetting a pointer to the ClutterClient from
	HD to inside the ClutterClient

2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323.
	It really works this time...

2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323,
	Any actors that were children of the ClutterClient's actor are
	now removed (this also fixes hd-decor problems that appear to
	be causing NB#108825)
