@@ -1,3 +1,10 @@
+2009-04-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_destroy):
+	  Reverted the latest workaround for NB#109094.
+	  The problem is supposed to be fixed in hildon-desktop
+	  and it broke long-press-back-button.
+
 2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.29
